--- a/ToDoList/views/list.ejs
+++ b/ToDoList/views/list.ejs
@@ -6,9 +6,12 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>It's a <%= kindOfDay %>!</h1>
 
-
+<% if (kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
+    <h1 style="color: maroon">It's a <%= kindOfDay %>!</h1>
+<% } else { %>
+    <h1 style="color: navy">It's a <%= kindOfDay %>!</h1>
+<% } %>
 
 </body>
 </html>
