Added New item function to todolist

--- a/ToDoList/views/list.ejs
+++ b/ToDoList/views/list.ejs
@@ -17,6 +17,12 @@
     <li>Buy Food</li>
     <li>Cook Food</li>
     <li>Eat Food</li>
+    <% for(var i=0; i<newlistItem.length; i++) {%> 
+        <li>
+            <%= newlistItem[i]%>
+        </li>
+     <% } %>
+
 </ul>
 
 <form action="/" method="post">
