--- a/ToDoList/views/list.ejs
+++ b/ToDoList/views/list.ejs
@@ -14,12 +14,10 @@
 <% } %>
 
 <ul>
-    <li>Buy Food</li>
-    <li>Cook Food</li>
-    <li>Eat Food</li>
-    <% for(var i=0; i<newlistItem.length; i++) {%> 
+
+    <% for(var i=0; i<newlistItems.length; i++) {%> 
         <li>
-            <%= newlistItem[i]%>
+            <%= newlistItems[i]%>
         </li>
      <% } %>
 
