Fixed the weekend colloring for title

--- a/ToDoList/views/list.ejs
+++ b/ToDoList/views/list.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<% if (kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
+<% if (weekend === "Saturday" || weekend === "Sunday") { %>
     <h1 style="color: maroon">It's <%= kindOfDay %>!</h1>
 <% } else { %>
     <h1 style="color: navy">It's <%= kindOfDay %>!</h1>
@@ -32,4 +32,3 @@
 
 </body>
 </html>
-
