--- a/ToDoList/views/list.ejs
+++ b/ToDoList/views/list.ejs
@@ -9,9 +9,9 @@
 <body>
 <div class="box" id="heading">
     <% if (weekend === "Saturday" || weekend === "Sunday") { %>
-        <h1 style="color: maroon">It's <%= kindOfDay %>!</h1>
+        <h1 style="color: maroon">It's <%= listTitle %>!</h1>
     <% } else { %>
-        <h1 style="color: navy">It's <%= kindOfDay %>!</h1>
+        <h1 style="color: navy">It's <%= listTitle %>!</h1>
     <% } %>
 </div>
 
