--- a/ejs-challenge/views/partials/footer.ejs
+++ b/ejs-challenge/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with ❤️ by LindaS</p>
+    <p>Made with ❤️ by Linda</p>
   </div>
 </div>
 </body>
