--- a/ToDoList/views/about.ejs
+++ b/ToDoList/views/about.ejs
@@ -1,11 +1,9 @@
-<%- include("header") -%>
+<%- include('partials/header'); -%>
 
-<div class="box" id="heading">
-<h2>About the ToDo List</h2>
-</div>
+<h1>About Us</h1>
 
-<p>Integer ac nisi in mi ultricies dignissim. Sed facilisis orci ex, vitae pellentesque turpis vestibulum et. Ut vitae viverra ex. Etiam bibendum condimentum pretium. Nunc a urna quis dolor eleifend auctor vel vulputate velit. Quisque eget lectus sed leo eleifend egestas. Sed in risus vel urna congue vestibulum non eu risus. Integer luctus laoreet ante ac porta. Mauris tincidunt lectus ac ex mattis, vitae ornare diam lobortis. Suspendisse convallis mauris in tempor viverra. Praesent velit augue, egestas quis vestibulum id, tincidunt rhoncus ligula. Nunc at iaculis eros. Phasellus eu nunc ex.</p>
-<p>Proin nec est vitae velit ullamcorper finibus et vitae dui. Duis sodales vulputate orci, sit amet aliquet lacus aliquet sed. Donec vel nisi sagittis, efficitur eros vestibulum, fermentum lacus. Etiam eget pretium arcu. Mauris posuere massa sit amet tincidunt pellentesque. Nulla et lacus nec libero tristique cursus non eu justo. Curabitur laoreet interdum est ornare tempor. Curabitur porttitor non diam non bibendum. Ut eu mi eu metus iaculis faucibus. Aliquam sit amet pulvinar sem, ut fermentum odio. Aliquam libero eros, blandit vitae lectus vitae, placerat eleifend elit.</p>
+<p>
+    <%= aboutContent %>
+</p>
 
-
-<%- include("footer") -%>
+<%- include('partials/footer'); -%>
