--- a/ejs-challenge/views/compose.ejs
+++ b/ejs-challenge/views/compose.ejs
@@ -5,7 +5,7 @@
 
 <form action="" method="post">
     <input type="text" name="" id="">
-    <input type="button" value="Publish">
+    <button type="submit" name="buttom" value="Publish">Publish</button>
 </form>
 
 <%- include('partials/footer'); -%>
