--- a/ejs-challenge/views/compose.ejs
+++ b/ejs-challenge/views/compose.ejs
@@ -3,8 +3,8 @@
 <h1>Compose</h1>
 
 
-<form action="" method="post">
-    <input type="text" name="" id="">
+<form action="/compose" method="post">
+    <input type="text" name="postTitle" id="">
     <button type="submit" name="buttom" value="Publish">Publish</button>
 </form>
 
