--- a/ejs-challenge/views/compose.ejs
+++ b/ejs-challenge/views/compose.ejs
@@ -4,8 +4,19 @@
 
 
 <form action="/compose" method="post">
-    <input type="text" name="postTitle" id="">
-    <button type="submit" name="buttom" value="Publish">Publish</button>
+
+    <div class="form-group">
+        <label for="title">Title</label><br>
+        <input class="form-control" type="text" id="title" name="postTitle" value="Title">
+    </div>
+
+    <div class="form-group">
+        <label for="post">Post</label><br>
+        <textarea class="form-control" type="text" id="post" name="postBody" value="Post" rows="5" cols="30"></textarea>
+            
+    </div>
+    <button class="btn btn-primary" type="submit" name="buttom" value="Publish">Publish</button>
+
 </form>
 
 <%- include('partials/footer'); -%>
