--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -6,6 +6,9 @@
     <%= homeContent %>
 </p>
 
-<% console.log("posts") %>
+<% for(var i = 0; i < posts.length; i++) { %>
+    <% console.log(posts[i].title) %>
+<% } %>
+
 
 <%- include('partials/footer'); -%>
