--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -6,9 +6,6 @@
     <%= homeContent %>
 </p>
 
-<% for(var i = 0; i < posts.length; i++) { %>
-    <% console.log(posts[i].title) %>
-<% } %>
-
+<% posts.forEach(post => console.log(post.title)); %>
 
 <%- include('partials/footer'); -%>
