--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -6,6 +6,12 @@
     <%= homeContent %>
 </p>
 
-<% posts.forEach(post => console.log(post.title)); %>
+<% posts.forEach(function(post) { %>
+    <!-- console.log(post.title)); %> -->
+    <h1><%= post.title %></h1>
+    <p><%= post.body %></p>
+    <hr>
+<% }) %>
+
 
 <%- include('partials/footer'); -%>
