Chalange 17 - Blog post route

--- a/ejs-challenge/views/compose.ejs
+++ b/ejs-challenge/views/compose.ejs
@@ -7,7 +7,7 @@
 
     <div class="form-group">
         <label for="title">Title</label><br>
-        <input class="form-control" type="text" id="title" name="postTitle" value="Title">
+        <input class="form-control" type="text" id="title" name="postTitle">
     </div>
 
     <div class="form-group">
