--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -9,7 +9,7 @@
 <% posts.forEach(function(post) { %>
     <!-- console.log(post.title)); %> -->
     <h1><%= post.title %></h1>
-    <p><%= post.body %></p>
+    <p><%= post.body.substring(0, 100) %> ...</p>
     <hr>
 <% }) %>
 
