--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -9,7 +9,9 @@
 <% posts.forEach(function(post) { %>
     <!-- console.log(post.title)); %> -->
     <h1><%= post.title %></h1>
-    <p><%= post.body.substring(0, 100) %> ...</p>
+    <p><%= post.body.substring(0, 100) + " ..." %>  
+        <a href="/posts/<%= post.title.toLowerCase() %>" class="btn btn-primary" role="button">Read more</a>
+    </p>
     <hr>
 <% }) %>
 
