--- a/ejs-challenge/views/compose.ejs
+++ b/ejs-challenge/views/compose.ejs
@@ -8,7 +8,7 @@
         <label for="blogTitle">Title</label><br>
         <input class="form-control" type="text" id="blogTitleInput" name="blogTitleInput">
         <label for="blogBody">Body</label>
-        <textarea class="form-control" id="blogBody" rows="4"></textarea>
+        <textarea class="form-control" id="blogBody" name="blogBody" rows="4"></textarea>
     </div>
     <button type="submit" class="btn btn-primary mb-2" value="Publish">Publish</button>
   </form> 
