--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -6,4 +6,12 @@
     <%= homeStartingContent %> 
 </p>
 
+
+<% posts.forEach(function(post) {  %>
+      <h1><%= post.blogTitle %></h1>
+      <p><%= post.blogBody %></p>
+    <hr/>
+ <% }) %>
+
+
 <%- include partials/footer.ejs %>
