--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -9,7 +9,9 @@
 
 <% posts.forEach(function(post) {  %>
       <h1><%= post.blogTitle %></h1>
-      <p><%= post.blogBody %></p>
+      <p><%= post.blogBody.substring(0, 100) + " ..." %>
+        <a href="posts/<%= post.blogTitle.toLowerCase() %>" class="btn btn-primary" role="button">Read More</a>
+      </p>
     <hr/>
  <% }) %>
 
